Reimpored with no builds

--- a/MyProject/Config/DefaultEngine.ini
+++ b/MyProject/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/FireExtinguisherSim.FireExtinguisherSim
 GameDefaultMap=/Game/FireExtinguisherSim.FireExtinguisherSim
+GlobalDefaultGameMode=/Game/VRGameMode.VRGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
