--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,8 +158,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/FireExtinguisherSim
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
